<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_info_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_auth_token_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <ImageView
            android:id="@+id/img_app"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:src="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/txt_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_info_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_auth_token_2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <ImageView
            android:id="@+id/img_service"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:src="@drawable/account_icon" />

        <TextView
            android:id="@+id/txt_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_info_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_auth_token_3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:src="@drawable/account_icon" />

        <TextView
            android:id="@+id/txt_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chk_always"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_auth_token_remember"
        android:visibility="gone" />

</LinearLayout>
